--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,34 @@
+body {
+  background-color:  #fffff5;
+}
 #box {
   position: relative;
   margin: auto;
   margin-top: 200px;
   display: block;
   width: 600px;
-  height: 420px;
+  height: 600px;
+}
+#face-1, #face-2 {
+  position: absolute;
+  width: 40%;
+  height: 60%;
+  border-radius: 75% 0% 0% 0%;
+}
+#face-1 {
+  left: 10%;
+  background-color: white;
+}
+#face-2 {
+  transform: rotateY(180deg);
+  background-color: #f2f2f2;
+  right: 10%;
+}
+#hat-1 {
+  position: absolute;
+  width: 35%;
+  height: 30%;
+  top: -30%;
+  left: 65%;
+  background-color: #323232;
 }
