--- a/styles.css
+++ b/styles.css
@@ -24,11 +24,50 @@ body {
   background-color: #f2f2f2;
   right: 10%;
 }
-#hat-1 {
+#hat-1, #hat-2 {
   position: absolute;
-  width: 35%;
-  height: 30%;
-  top: -30%;
-  left: 65%;
+  width: 15%;
+  height: 20%;
+  top: -10%;
+}
+#hat-1 {
+  left: 35%;
   background-color: #323232;
+}
+#hat-2 {
+  right: 35%;
+  background-color: black;
+}
+#hat-top-1, #hat-top-2 {
+  position: absolute;
+  width: 100%;
+  height: 80%;
+  top: -75%;
+}
+#hat-top-1 {
+  background-color: #323232;
+  border-top-left-radius: 100%;
+}
+#hat-top-2 {
+  background-color: black;
+  border-top-right-radius: 100%;
+}
+#brim-1, #brim-2 {
+  position: absolute;
+  width: 15%;
+  height: 9%;
+  top: -5%;
+}
+#brim-1 {
+  left: 30%;
+  border-top-left-radius: 40%;
+  border-bottom-left-radius: 40%;
+  background-color: #323232;
+}
+#brim-2 {
+  right: 30%;
+  border-top-right-radius: 40%;
+  border-bottom-right-radius: 40%;
+  background-color: black;
+
 }
